--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "standalone",
   "Scope": "/uFire-BLE/",
-  "start_url": "/",
+  "start_url": "/uFire-BLE/",
   "icons": [
         {
             "src": "assets/android-chrome-192x192.png",
