--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "uFire BLE",
   "short_name": "uFire BLE",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "display": "standalone",
   "Scope": "/uFire-BLE/",
   "start_url": "/uFire-BLE/",
